--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "symfony/process": "^6.4.14",
-        "symfony/http-foundation": "^6.4.14"
+        "symfony/http-foundation": "^6.4.14",
+        "nesbot/carbon": "^2.72.6",
+        "league/commonmark": "^2.6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
